package protocol;

option optimize_for = SPEED;

enum ProtocolType {
    C2S_KEEP_ALIVE = 1001;
    S2C_KEEP_ALIVE = 1002;
    C2S_LOGIN = 1003;
    S2C_LOGIN = 1004;
    C2S_SEND_MSG = 1005;
    S2C_SEND_MSG = 1006;
}